[gd_scene load_steps=12 format=3 uid="uid://chmegxltn4stt"]

[ext_resource type="Script" path="res://Scripts/UX and UI/flying_credits_manager.gd" id="1_xtpho"]
[ext_resource type="PackedScene" uid="uid://djowxohivfhhb" path="res://Scenes/Objects and Enemies/flying_child.tscn" id="2_eruml"]
[ext_resource type="Texture2D" uid="uid://d0ot502nge360" path="res://Art/environment/SpaceBackground/background_space_spaceLayer.png" id="3_a3sr5"]
[ext_resource type="Shader" path="res://Shaders/UVTextureScrollShader.gdshader" id="3_nxjs3"]
[ext_resource type="Texture2D" uid="uid://c288pgae2xq7d" path="res://Art/environment/SpaceBackground/background_space_planetLayer.png" id="4_bbomm"]
[ext_resource type="Texture2D" uid="uid://be62r58yrr0tm" path="res://Art/environment/SpaceBackground/background_space_starLayer.png" id="5_7onrn"]
[ext_resource type="Texture2D" uid="uid://c03h0e4txuitu" path="res://Art/environment/SpaceBackground/background_space_cloudLayer.png" id="6_govxu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uva2n"]
shader = ExtResource("3_nxjs3")
shader_parameter/motion = Vector2(0, 0)
shader_parameter/scale = 1.0
shader_parameter/offset = Vector2(0, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ugnax"]
shader = ExtResource("3_nxjs3")
shader_parameter/motion = Vector2(0, 0)
shader_parameter/scale = 1.0
shader_parameter/offset = Vector2(0, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qgxtc"]
shader = ExtResource("3_nxjs3")
shader_parameter/motion = Vector2(0, 0)
shader_parameter/scale = 1.0
shader_parameter/offset = Vector2(0, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vv0vl"]
shader = ExtResource("3_nxjs3")
shader_parameter/motion = Vector2(0, 0)
shader_parameter/scale = 1.0
shader_parameter/offset = Vector2(0, 0)

[node name="FlyingCredits" type="Node"]
script = ExtResource("1_xtpho")

[node name="BG_base" type="Sprite2D" parent="."]
light_mask = 0
visibility_layer = 4
texture_repeat = 2
material = SubResource("ShaderMaterial_uva2n")
position = Vector2(0, -139)
texture = ExtResource("3_a3sr5")
region_enabled = true
region_rect = Rect2(0, 0, 2000, 1000)

[node name="BG_Stars" type="Sprite2D" parent="."]
light_mask = 0
visibility_layer = 4
texture_repeat = 2
material = SubResource("ShaderMaterial_ugnax")
position = Vector2(0, -139)
texture = ExtResource("5_7onrn")
region_enabled = true
region_rect = Rect2(0, 0, 2000, 1000)

[node name="BG_planets" type="Sprite2D" parent="."]
light_mask = 0
visibility_layer = 4
texture_repeat = 2
material = SubResource("ShaderMaterial_qgxtc")
position = Vector2(0, -139)
texture = ExtResource("4_bbomm")
region_enabled = true
region_rect = Rect2(0, 0, 2000, 1000)

[node name="BG_clouds" type="Sprite2D" parent="."]
light_mask = 0
visibility_layer = 4
texture_repeat = 2
material = SubResource("ShaderMaterial_vv0vl")
position = Vector2(0, -139)
texture = ExtResource("6_govxu")
region_enabled = true
region_rect = Rect2(0, 0, 2000, 1000)

[node name="FlyingChild" parent="." instance=ExtResource("2_eruml")]
position = Vector2(-110, 0)

[node name="Camera2D" type="Camera2D" parent="."]
